# mlk_appointments_chatbot

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml
src/: config.py  database.py  main.py  master_prompt.py  models.py  ollama_service.py  ollama_tools.py  schemas.py  tools.py
tests/: conftest.py  test_appointments.py  test_chat.py
